<resources>
    <string name="app_name">Hi Friends</string>
    <string name="version_number">Alpha Version 1.0</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">RETRY</string>
    <string name="login_error_dialog_title">Connection Error!</string>
    <string name="login_error_dialog_message">Want to try again?</string>

    <!--Login Screen start-->
    <string name="sign_up_dialog_message">Enjoy Hangout!</string>
    <string name="login_failed_message">Authentication failed</string>
    <string name="valid_password">3 to 32 alphanumeric characters</string>
    <string name="login_toolbar">Login</string>
    <string name="success_dialog_title">Success</string>
    <string name="valid_username3">username samsung is not allowed</string>
    <string name="registration">Registration</string>
    <string name="password_input_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="valid_username">3 to 64 characters excluding special characters</string>
    <string name="valid_username2">Only alphanumeric characters allowed</string>
    <string name="getting_ready">Getting ready...</string>
    <string name="xmpp_signup_error">XMPP Signup Error!</string>
    <string name="xmpp_signin_error">XMPP Signin Error!</string>
    <string name="xmpp_connection_error">XMPP Connection Error!</string>
    <string name="thanks">Thanks</string>
    <string name="empty_string"></string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <!--Login Screen end-->
    <string name="try_again">Try again</string>

    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="room">Group</string>

    <!--Droid Tool-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="common_warning_title">Attention!</string>
    <string name="no_internet_title">Network Error!</string>
    <string name="no_internet_message">Please Enable Internet Connection</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="gps_track_failed">Wait till getting correct location</string>
    <string name="no_gps_title">Location Service Error!</string>
    <string name="no_gps_message">Please Enable Location Service</string>
    <string name="no_location">No Location Provider is Available</string>
    <string name="permission_failed">Your Permission getting failed!</string>
    <string name="permission_message_twice">To allow permission please go to device settings page</string>
    <string name="language_settings">Language Settings</string>
    <string name="already_synced">Already data has synced with server</string>
    <string name="want_to_delete">Want to delete information</string>
    <string name="sorry">Sorry!</string>
    <string name="crash_message">Application has faced temporary Error</string>
</resources>
