<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".activities.RegisterActivity">

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:paddingTop="70dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                    <View
                        android:layout_alignParentLeft="true"
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:background="@color/soft_red"
                        />

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="@string/register"
                        android:textColor="@color/soft_red"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:paddingRight="30dp"
                    android:paddingLeft="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <!--android:theme="@style/TextLabel"-->

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Username"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingRight="30dp"
                    android:paddingLeft="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:paddingRight="30dp"
                    android:paddingLeft="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/next"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/plus_x"
            app:backgroundTint="@color/soft_red"
            android:transitionName="loginFab"
            app:fabSize="normal" />

    </FrameLayout>

</RelativeLayout>
